--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_script:
   - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.1
   - repo sync
 script:
-  - cd $HOME/twrp/ && git clone -b android-8.0 https://github.com/raza231198/twrp_device_asus_X00PD.git device/asus/X00PD
-  - git clone https://github.com/TeamWin/android_device_qcom_common.git -b android-8.0 device/qcom/common
+  - cd $HOME/twrp/ && git clone -b staging https://github.com/raza231198/twrp_device_asus_X00PD.git device/asus/X00PD
   - |
     docker run --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/twrp/:rw,z" yshalsager/lineageos:14.1 bash << EOF
     cd /home/twrp/
@@ -34,7 +33,7 @@ deploy:
   on:
     tags: false
     repo: raza231198/twrp_X00PD-release
-    branch: master
+    branch: staging
 branches:
   except:
     - /^(?i:untagged)-.*$/
