--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ deploy:
   on:
     tags: false
     repo: raza231198/twrp_X00PD-release
-    branch: orange
+    branch: orangefox
 branches:
   except:
     - /^(?i:untagged)-.*$/
