--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
 deploy:
   skip_cleanup: true
   provider: releases
-  api_key: "873af777cb781955dbe4bd993a6a7a6fa027ac5b"
+  api_key:  db5c7bddf48e33216f10adfe6ef4a8152e879fb9
   file_glob: true
   file: $HOME/twrp/*.img
   on:
