--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ after_success:
 deploy:
   skip_cleanup: true
   provider: releases
-  api_key:  
-         secure: db5c7bddf48e33216f10adfe6ef4a8152e879fb9
+  api_key:  "$github_key"
   file_glob: true
   file: $HOME/twrp/*.img
   on:
